SLT_Handler/Include/MMC/MMMCWHP220.h

INT API start_move(INT ax, DOUBLE pos, DOUBLE vel, INT acc);
INT API move(INT ax, DOUBLE pos,DOUBLE vel, INT acc);
INT API start_r_move(INT ax, DOUBLE pos, DOUBLE vel, INT acc);
INT API r_move(INT ax, DOUBLE pos,DOUBLE vel, INT acc);
INT API start_s_move(INT ax, DOUBLE pos, DOUBLE vel, INT acc);
INT API s_move(INT ax, DOUBLE pos,DOUBLE vel, INT acc);
INT API start_rs_move(INT ax, DOUBLE pos, DOUBLE vel, INT acc);
INT API rs_move(INT ax, DOUBLE pos,DOUBLE vel, INT acc);
INT API start_t_move(INT ax, DOUBLE pos, DOUBLE vel, INT acc, INT dcc);
INT API t_move(INT ax, DOUBLE pos,DOUBLE vel, INT acc, INT dcc);
INT API start_ts_move(INT ax, DOUBLE pos, DOUBLE vel, INT acc, INT dcc);
INT API ts_move(INT ax, DOUBLE pos,DOUBLE vel, INT acc, INT dcc);
INT API start_tr_move(INT ax, DOUBLE pos, DOUBLE vel, INT acc, INT dcc);
INT API tr_move(INT ax, DOUBLE pos,DOUBLE vel, INT acc, INT dcc);
INT API start_trs_move(INT ax, DOUBLE pos, DOUBLE vel, INT acc, INT dcc);
INT API trs_move(INT ax, DOUBLE pos,DOUBLE vel, INT acc, INT dcc);
INT API start_t_move_all(INT len, pINT ax, pDOUBLE pos, pDOUBLE vel, pINT acc,pINT dcc);
INT API t_move_all(INT len, pINT ax, pDOUBLE pos, pDOUBLE vel, pINT acc, pINT dcc);
INT API start_ts_move_all(INT len, pINT ax, pDOUBLE pos, pDOUBLE vel, pINT acc,pINT dcc);
INT API ts_move_all(INT len, pINT ax, pDOUBLE pos,pDOUBLE vel, pINT acc, pINT dcc);
INT API start_move_all(INT len, pINT ax, pDOUBLE pos, pDOUBLE vel, pINT acc);
INT API move_all(INT len, pINT ax, pDOUBLE pos,pDOUBLE vel, pINT acc);
INT API start_s_move_all(INT len, pINT ax, pDOUBLE pos, pDOUBLE vel, pINT acc);
INT API s_move_all(INT len, pINT ax, pDOUBLE pos,pDOUBLE vel, pINT acc);
INT API wait_for_done( INT ax);
INT API wait_for_all(INT len, pINT ax);
INT API v_move(INT ax, DOUBLE vel, INT acc);
INT API set_positive_sw_limit(INT ax, DOUBLE limit, INT action);
INT API get_positive_sw_limit(INT ax, pDOUBLE limit, pINT action);
INT API set_negative_sw_limit(INT ax, DOUBLE limit, INT action);
INT API get_negative_sw_limit(INT ax, pDOUBLE limit, pINT action);
INT API get_accel_limit(INT ax, pINT limit);
INT API set_accel_limit(INT ax, INT limit);
INT API fset_accel_limit(INT ax, INT limit);
INT API get_vel_limit(INT ax, pDOUBLE limit);
INT API set_vel_limit(INT ax, DOUBLE limit);
INT API set_positive_limit(INT ax, INT act);
INT API get_positive_limit(INT ax, pINT act);
INT API set_negative_limit(INT ax, INT act);
INT API get_negative_limit(INT ax, pINT act);
INT API set_in_position(INT ax, DOUBLE pos);
INT API get_in_position(INT ax, pDOUBLE pos);
INT API set_error_limit(INT ax, DOUBLE limit, INT action);
INT API get_error_limit(INT ax, pDOUBLE limit, pINT action);
INT API set_positive_level(INT ax, INT level);
INT API get_positive_level(INT ax, pINT level);
INT API set_negative_level(INT ax, INT level);
INT API get_negative_level(INT ax, pINT level);
INT API home_switch(INT ax);
INT API pos_switch(INT ax);
INT API neg_switch(INT ax);
INT API amp_fault_switch(INT ax);
INT API set_io(INT port, LONG value);
INT API get_io(INT port, pLONG value);
INT API get_out_io(INT port, pLONG value);
INT API set_bit(INT bitNo);
INT API reset_bit(INT bitNo);
INT API get_gain(INT ax, pLONG coeff);
INT API fget_gain(INT ax, pLONG coeff);
INT API set_gain(INT ax, pLONG coeff);
INT API fset_gain(INT ax, pLONG coeff);
INT API get_v_gain(INT ax, pLONG coeff);
INT API fget_v_gain(INT ax, pLONG coeff);
INT API set_v_gain(INT ax, pLONG coeff);
INT API fset_v_gain(INT ax, pLONG coeff);
INT API fset_p_integration(INT ax, INT mode);
INT API fset_v_integration(INT ax, INT mode);
INT API fget_p_integration(INT ax, pINT mode);
INT API fget_v_integration(INT ax, pINT mode);
INT API set_p_integration(INT ax, INT mode);
INT API get_p_integration(INT ax, pINT mode);
INT API set_v_integration(INT ax, INT mode);
INT API get_v_integration(INT ax, pINT mode);
INT API set_amp_enable(INT axno,INT state);
INT API get_amp_enable(INT axno,pINT state);
INT API amp_fault_reset(INT axno);
INT API amp_fault_set(INT axno);
INT API set_amp_enable_level(INT axno,INT level);
INT API get_amp_enable_level(INT axno,pINT level);
INT API fget_amp_enable_level(INT axno,pINT level);
INT API set_control(INT axno,INT control);
INT API get_control(INT axno, pINT control);
INT API set_electric_gear(INT axno, DOUBLE ratio);
INT API get_electric_gear(INT axno, pDOUBLE ratio);
INT API fget_electric_gear(INT axno, pDOUBLE ratio);
INT API set_step_mode(INT ax, INT mode);
INT API get_step_mode(INT ax, pINT mode);
INT API set_sync_map_axes(INT Master, INT Slave);
INT API set_sync_control(INT condition);
INT API get_sync_control(pINT condition);
INT API set_sync_gain(LONG syncgain);
INT API fset_sync_gain(LONG syncgain);
INT API get_sync_gain(pLONG syncgain);
INT API fget_sync_gain(pLONG syncgain);
INT API compensation_pos(INT len, pINT ax, pDOUBLE pos, pINT acc);
INT API set_pulse_ratio(INT axno, INT pgratio);
INT API fset_pulse_ratio(INT axno, INT pgratio);
INT API get_pulse_ratio(INT axno, pINT pgratio);
INT API set_stop(INT ax);
INT API set_stop_rate(INT ax, INT rate);
INT API get_stop_rate(INT ax, pINT rate);
INT API set_e_stop(INT ax);
INT API set_e_stop_rate(INT ax, INT rate);
INT API get_e_stop_rate(INT ax, pINT rate);