SLT_Handler/Include/MMC/MMCWHP220.bas


Declare Function start_move Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal pos As Double, ByVal vel As Double, ByVal acc As Integer) As Integer
Declare Function move Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal pos As Double, ByVal vel As Double, ByVal acc As Integer) As Integer
Declare Function start_r_move Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal pos As Double, ByVal vel As Double, ByVal acc As Integer) As Integer
Declare Function r_move Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal pos As Double, ByVal vel As Double, ByVal acc As Integer) As Integer
Declare Function start_s_move Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal pos As Double, ByVal vel As Double, ByVal acc As Integer) As Integer
Declare Function s_move Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal pos As Double, ByVal vel As Double, ByVal acc As Integer) As Integer
Declare Function start_rs_move Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal pos As Double, ByVal vel As Double, ByVal acc As Integer) As Integer
Declare Function rs_move Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal pos As Double, ByVal vel As Double, ByVal acc As Integer) As Integer
Declare Function start_t_move Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal pos As Double, ByVal vel As Double, ByVal acc As Integer, ByVal dcc As Integer) As Integer
Declare Function t_move Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal pos As Double, ByVal vel As Double, ByVal acc As Integer, ByVal dcc As Integer) As Integer
Declare Function start_ts_move Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal pos As Double, ByVal vel As Double, ByVal acc As Integer, ByVal dcc As Integer) As Integer
Declare Function ts_move Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal pos As Double, ByVal vel As Double, ByVal acc As Integer, ByVal dcc As Integer) As Integer
Declare Function start_tr_move Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal pos As Double, ByVal vel As Double, ByVal acc As Integer, ByVal dcc As Integer) As Integer
Declare Function tr_move Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal pos As Double, ByVal vel As Double, ByVal acc As Integer, ByVal dcc As Integer) As Integer
Declare Function start_trs_move Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal pos As Double, ByVal vel As Double, ByVal acc As Integer, ByVal dcc As Integer) As Integer
Declare Function trs_move Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal pos As Double, ByVal vel As Double, ByVal acc As Integer, ByVal dcc As Integer) As Integer
Declare Function start_t_move_all Lib "MMCWHP220.dll" (ByVal axlen As Integer, nax As Integer, nPos As Double, nVel As Double, nAcc As Integer, nDcc As Integer) As Integer
Declare Function t_move_all Lib "MMCWHP220.dll" (ByVal axlen As Integer, nax As Integer, nPos As Double, nVel As Double, nAcc As Integer, nDcc As Integer) As Integer
Declare Function start_ts_move_all Lib "MMCWHP220.dll" (ByVal axlen As Integer, nax As Integer, nPos As Double, nVel As Double, nAcc As Integer, nDcc As Integer) As Integer
Declare Function ts_move_all Lib "MMCWHP220.dll" (ByVal axlen As Integer, nax As Integer, nPos As Double, nVel As Double, nAcc As Integer, nDcc As Integer) As Integer

Declare Function start_move_all Lib "MMCWHP220.dll" (ByVal axlen As Integer, nax As Integer, nPos As Double, nVel As Double, nAcc As Integer) As Integer
Declare Function move_all Lib "MMCWHP220.dll" (ByVal axlen As Integer, nax As Integer, nPos As Double, nVel As Double, nAcc As Integer) As Integer
Declare Function start_s_move_all Lib "MMCWHP220.dll" (ByVal axlen As Integer, nax As Integer, nPos As Double, nVel As Double, nAcc As Integer) As Integer
Declare Function s_move_all Lib "MMCWHP220.dll" (ByVal axlen As Integer, nax As Integer, nPos As Double, nVel As Double, nAcc As Integer) As Integer
Declare Function wait_for_done Lib "MMCWHP220.dll" (ByVal ax As Integer) As Integer
Declare Function wait_for_all Lib "MMCWHP220.dll" (ByVal n As Integer, n As Integer) As Integer
Declare Function v_move Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal vel As Double, ByVal accel As Integer) As Integer

Declare Function set_positive_sw_limit Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal f As Double, ByVal n As Integer) As Integer
Declare Function get_positive_sw_limit Lib "MMCWHP220.dll" (ByVal ax As Integer, f As Double, n As Integer) As Integer
Declare Function set_negative_sw_limit Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal f As Double, ByVal n As Integer) As Integer
Declare Function get_negative_sw_limit Lib "MMCWHP220.dll" (ByVal ax As Integer, f As Double, n As Integer) As Integer

Declare Function get_accel_limit Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer
Declare Function set_accel_limit Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer
Declare Function fset_accel_limit Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer
Declare Function get_vel_limit Lib "MMCWHP220.dll" (ByVal ax As Integer, f As Double) As Integer
Declare Function set_vel_limit Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal f As Double) As Integer

Declare Function set_positive_limit Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer
Declare Function get_positive_limit Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer
Declare Function set_negative_limit Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer
Declare Function get_negative_limit Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer
Declare Function set_in_position Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal f As Double) As Integer
Declare Function get_in_position Lib "MMCWHP220.dll" (ByVal ax As Integer, f As Double) As Integer
Declare Function set_error_limit Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal f As Double, ByVal n As Integer) As Integer
Declare Function get_error_limit Lib "MMCWHP220.dll" (ByVal ax As Integer, f As Double, n As Integer) As Integer
Declare Function set_positive_level Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer
Declare Function get_positive_level Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer
Declare Function set_negative_level Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer
Declare Function get_negative_level Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer

Declare Function home_switch Lib "MMCWHP220.dll" (ByVal ax As Integer) As Integer
Declare Function pos_switch Lib "MMCWHP220.dll" (ByVal ax As Integer) As Integer
Declare Function neg_switch Lib "MMCWHP220.dll" (ByVal ax As Integer) As Integer
Declare Function amp_fault_switch Lib "MMCWHP220.dll" (ByVal ax As Integer) As Integer
Declare Function set_io Lib "MMCWHP220.dll" (ByVal bd As Integer, ByVal l As Long) As Integer
Declare Function get_io Lib "MMCWHP220.dll" (ByVal bd As Integer, l As Long) As Integer
Declare Function get_out_io Lib "MMCWHP220.dll" (ByVal bd As Integer, l As Long) As Integer
Declare Function set_bit Lib "MMCWHP220.dll" (ByVal i As Integer) As Integer
Declare Function reset_bit Lib "MMCWHP220.dll" (ByVal i As Integer) As Integer

Declare Function get_gain Lib "MMCWHP220.dll" (ByVal ax As Integer, coeff As Long) As Integer
Declare Function fget_gain Lib "MMCWHP220.dll" (ByVal ax As Integer, coeff As Long) As Integer
Declare Function set_gain Lib "MMCWHP220.dll" (ByVal ax As Integer, coeff As Long) As Integer
Declare Function fset_gain Lib "MMCWHP220.dll" (ByVal ax As Integer, coeff As Long) As Integer
Declare Function get_v_gain Lib "MMCWHP220.dll" (ByVal ax As Integer, coeff As Long) As Integer
Declare Function fget_v_gain Lib "MMCWHP220.dll" (ByVal ax As Integer, coeff As Long) As Integer
Declare Function set_v_gain Lib "MMCWHP220.dll" (ByVal ax As Integer, coeff As Long) As Integer
Declare Function fset_v_gain Lib "MMCWHP220.dll" (ByVal ax As Integer, coeff As Long) As Integer

Declare Function fset_p_integration Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer
Declare Function fset_v_integration Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer
Declare Function fget_p_integration Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer
Declare Function fget_v_integration Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer
Declare Function set_p_integration Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer
Declare Function get_p_integration Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer
Declare Function set_v_integration Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer
Declare Function get_v_integration Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer

Declare Function set_amp_enable Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer
Declare Function get_amp_enable Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer
Declare Function amp_fault_reset Lib "MMCWHP220.dll" (ByVal ax As Integer) As Integer
Declare Function amp_fault_set Lib "MMCWHP220.dll" (ByVal ax As Integer) As Integer
Declare Function set_amp_enable_level Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer
Declare Function get_amp_enable_level Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer
Declare Function fget_amp_enable_level Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer
Declare Function set_control Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer
Declare Function get_control Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer
Declare Function set_electric_gear Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal f As Double) As Integer
Declare Function get_electric_gear Lib "MMCWHP220.dll" (ByVal ax As Integer, f As Double) As Integer
Declare Function fget_electric_gear Lib "MMCWHP220.dll" (ByVal ax As Integer, f As Double) As Integer
Declare Function set_step_mode Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer
Declare Function get_step_mode Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer
Declare Function set_sync_map_axes Lib "MMCWHP220.dll" (ByVal max As Integer, ByVal sax As Integer) As Integer
Declare Function set_sync_control Lib "MMCWHP220.dll" (ByVal state As Integer) As Integer
Declare Function get_sync_control Lib "MMCWHP220.dll" (state As Integer) As Integer
Declare Function set_sync_gain Lib "MMCWHP220.dll" (ByVal gain As Integer) As Integer
Declare Function fset_sync_gain Lib "MMCWHP220.dll" (ByVal gain As Integer) As Integer
Declare Function get_sync_gain Lib "MMCWHP220.dll" (gain As Integer) As Integer
Declare Function fget_sync_gain Lib "MMCWHP220.dll" (gain As Integer) As Integer
Declare Function compensation_pos Lib "MMCWHP220.dll" (ByVal axlen As Integer, nax As Integer, nCdist As Double, nAcc As Integer) As Integer

Declare Function set_pulse_ratio Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer
Declare Function fset_pulse_ratio Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer
Declare Function get_pulse_ratio Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer

Declare Function set_stop Lib "MMCWHP220.dll" (ByVal ax As Integer) As Integer
Declare Function set_stop_rate Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer
Declare Function get_stop_rate Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer
Declare Function set_e_stop Lib "MMCWHP220.dll" (ByVal ax As Integer) As Integer
Declare Function set_e_stop_rate Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer
Declare Function get_e_stop_rate Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer
